--- a/public/index.htm
+++ b/public/index.htm
@@ -5,5 +5,6 @@
     <body>
         <div id="root"></div>
     </body>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="./js/index.js"></script>
 </html>
